[package]
name = "ibus"
version = "0.1.0"
authors = ["Muhammad Mominul Huque <mominul2082@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"
glib = "0.10"
glib-sys = "0.10"
gobject-sys = "0.10"
gio = "0.9"

[dependencies.ibus-sys]
path = "./ibus-sys"
